Added cover image url support.

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/sathi/Desktop/json-20220924.jar"/>
+	<classpathentry kind="lib" path="D:/json-20220924.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
