--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="D:/json-20220924.jar"/>
+	<classpathentry kind="lib" path="resources/JSON.jar"/>
+	<classpathentry kind="lib" path="resources/MigLayout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
